--- a/styles.CSS
+++ b/styles.CSS
@@ -1,132 +1,49 @@
-body, ul,li,h1,h2,a{
-    margin: 0;
-    padding:0;
-    font-family: arial;
+@media screen and (min-width: 640px){
+    .flex-container {
+        display: flex;
+    }    
 }
+
 
 header{
-    color: white;
-    text-align: center;
-    background-color: rgb(212, 160, 151);
-   position: fixed;
-    width: 100%;
-    z-index: 2;
- 
-}
-header h1{
-    color:rgb(161, 83, 135);
-    border: 5px solid white;
-    padding: 0px 10px;
-    display: inline-block;
-    border-radius: 20px;
-    
-}
-.photo{
-    position: relative;
-}
-.photo img{width: 100%;
-    height: 500px;
-    background-image: url(photo/photo.jpg);
-    background-size: 100% 100%;
-   
-  }
-.photo .welcome{
-    color:rgb(161, 83, 135);;
-    border: 20px;
-    position: absolute;
-    left: 5px;
-    top: 20%;
-}
-.photo h2{
-    font-size: 50px;
-}
-.photo h2 span{
-    font-size: 30px;
-}
-
-nav{
     background-color: rgb(240, 227, 240);
     padding: 20px;
-    position:sticky;
-    top: 47px;
-    
-    
-}
-nav ul {
+    }
+header ul {
     white-space: nowrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    
-}
-nav li{
+    }
+header  li{
     width: 25%;
     display: inline-block;
     font-size: 34px;
-    position: sticky;
-}
-nav li a{
-    text-decoration: none;
+    }
+header li a {
     color: violet;
 }
 
-article h2{
+section h2{
      color: rgb(161, 83, 135);
      font-size: 38px;
      text-align:center;
-    
-
-}
+    }
 article p{
     color: rgb(121, 24, 88);
     line-height: 30px;
     margin-left: 20px;
     
-
-
-
-
-    
 }
 aside img{
-    width:15%; 
+    width:18%; 
     float: right;
     margin: 5px 80px;
 }
-.email{
-    background-color: rgb(240, 227, 240);
-    padding: 10px;
-    color: violet;
-    text-align: center;
-   
-}
-.email h2{
-    font-size: 34px;
-}
-form input{
-    margin: 10px 0 ;
-    padding:10px 20px;
-    font-size: 20px;
-    border-radius: 28px;
-    border: 4px solid wheat;
-}
+
 footer{
     background-color:rgb(212, 160, 151);
     color:rgb(161, 83, 135);
     padding: 9px;
     text-align: center;
   
-}
-@media screen and (max-width:700px){
-    .photo .welcome h2{
-        font-size: 30px;
-    }
-    nav li{
-        font-size:20px ;
-    }
-    article p{
-        font-size: 15px;
-       
-
 }
 
     
