--- a/styles.CSS
+++ b/styles.CSS
@@ -21,7 +21,7 @@ header li a {
     color: violet;
 }
 
-section h2{
+articale h2{
      color: rgb(161, 83, 135);
      font-size: 38px;
      text-align:center;
