--- a/reem.CSS
+++ b/reem.CSS
@@ -1,8 +1,16 @@
+@media screen and (min-width: 640px){
+    .flex-container {
+        display: flex;
+    }    
+}
+
 body{
     background-color:#efefef;
-    margin: 100px 100px;
+    margin-top: 100px;
 }
-ul{
+
+
+    ul{
     line-height: 50px;
     text-align: center;
     list-style: inside;
@@ -15,8 +23,8 @@ ul{
    color: rgb(192, 142, 165);
    margin: 50px 0;
 } */
-h1 { color: #c27aa6; font-family: 'Rouge Script', cursive; 
-    font-size: 130px; font-weight: normal; line-height: 48px;
+header { color: #c27aa6; font-family: 'Rouge Script', cursive; 
+    font-size: 50px; font-weight: normal; line-height: 48px;
      margin: 0 0 50px; text-align: center; text-shadow: 1px 1px 2px #c273bb; }
 li{
     width:500px;
@@ -27,7 +35,15 @@ h2{text-align: center;
     color: rgb(167, 39, 99);
     margin-top: 50px 0;
 
-}  
+} 
+footer{
+    background-color:rgb(212, 160, 151);
+    color:rgb(161, 83, 135);
+    padding: 9px;
+    text-align: center;
+  
+}
+
   
   
 
