--- a/styles.CSS
+++ b/styles.CSS
@@ -15,18 +15,31 @@
      
             
 
-
-    header{
+      header{
         background-color: rgb(240, 227, 240);
-        padding: 20px;
+        padding: 0;
         }
-    header ul {
-        white-space: nowrap;
+     ul {
+         list-style-type:none;
+         margin:0;
+         padding:0;
+         display:flex;
+         flex-wrap:wrap;
+         flex-direction:row;
+         justify-content:space-evenly;
+         align-items:center;
+
+
+
+
+        
         }
-    header  li{
-        width: 25%;
-        display: inline-block;
-        font-size: 34px;
+     li{
+         margin:0.5em;
+         padding:0.5em;
+         flex-basis:auto;
+
+        
         
         }
     header li a {
