--- a/styles.CSS
+++ b/styles.CSS
@@ -1,85 +1,65 @@
+@media screen and (min-width:375px) {}
 
-@media screen and (min-width:375px){
-
-}
-  
-      body, html {
-        margin: 0;
-        padding: 0;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        font-weight: 100;
-        font-size: 20px;
-      }
-     
-            
-
-      header{
-        background-color: rgb(240, 227, 240);
-        padding: 0;
-        }
-     ul {
-         list-style-type:none;
-         margin:0;
-         padding:0;
-         display:flex;
-         flex-wrap:wrap;
-         flex-direction:row;
-         justify-content:space-evenly;
-         align-items:center;
-
-
-
-
-        
-        }
-     li{
-         margin:0.5em;
-         padding:0.5em;
-         flex-basis:auto;
-
-        
-        
-        }
-    header li a {
-        color: violet;
-    }
-h2{
-     color: rgb(161, 83, 135);
-     font-size: 38px;
-     text-align:center;
-    }
-article p{
-    color: rgb(121, 24, 88);
-    line-height: 30px;
-    margin-left: 20px;
-    
-}
-aside img{
-  
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-    float: right;
-   
-  }
-
-footer{
-    background-color:rgb(212, 160, 151);
-    color:rgb(161, 83, 135);
-    padding: 9px;
-    text-align: center;
-  
+body,
+html {
+  margin: 0;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  font-weight: 100;
+  font-size: 20px;
 }
 
-    
-  
-    
+header {
+  background-color: rgb(240, 227, 240);
+  padding: 0;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+li {
+  margin: 0.5em;
+  padding: 0.5em;
+  flex-basis: auto;
+}
 
+header li a {
+  color: violet;
+}
 
-   
+h2 {
+  color: rgb(161, 83, 135);
+  font-size: 38px;
+  text-align: center;
+}
 
+article p {
+  color: rgb(121, 24, 88);
+  line-height: 30px;
+  margin-left: 20px;
+}
+
+aside img {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  float: right;
+}
+
+footer {
+  background-color: rgb(212, 160, 151);
+  color: rgb(161, 83, 135);
+  padding: 9px;
+  text-align: center;
+}
