--- a/reem.CSS
+++ b/reem.CSS
@@ -1,8 +1,5 @@
-@media screen and (min-width: 640px){
-    .flex-container {
-        display: flex;
-    }    
-}
+@media screen and (min-width:375px) {}
+
 
 body{
     background-color:#efefef;
