--- a/reem.CSS
+++ b/reem.CSS
@@ -1,50 +1,80 @@
 @media screen and (min-width:375px) {}
 
-
-body{
-    background-color:#efefef;
-    margin-top: 100px;
+body {
+  background-color: #efefef;
+  margin-top: 100px;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  font-weight: 100;
+  font-size: 20px;
 }
 
-
-    ul{
-    line-height: 50px;
-    text-align: center;
-    list-style: inside;
-}
-     
-
-
-/* h1{
-    text-align: center;
-   color: rgb(192, 142, 165);
-   margin: 50px 0;
-} */
-header { color: #c27aa6; font-family: 'Rouge Script', cursive; 
-    font-size: 50px; font-weight: normal; line-height: 48px;
-     margin: 0 0 50px; text-align: center; text-shadow: 1px 1px 2px #c273bb; }
-li{
-    width:500px;
-    margin:0 auto;
-    color: rgb(224, 94, 203);
-    font-size: 20px;}
-h2{text-align: center;
-    color: rgb(167, 39, 99);
-    margin-top: 50px 0;
-
-} 
-footer{
-    background-color:rgb(212, 160, 151);
-    color:rgb(161, 83, 135);
-    padding: 9px;
-    text-align: center;
-  
+header {
+  background-color: rgb(240, 227, 240);
+  padding: 0;
 }
 
-  
-  
+header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
-    
+li {
+  margin: 0.5em;
+  padding: 0.5em;
+  flex-basis: auto;
+}
 
+header li a {
+  color: violet;
+}
 
+nav ul {
+  line-height: 50px;
+  text-align: center;
+  list-style-type: none;
+}
 
+h1 {
+  color: #c27aa6;
+  font-family: 'Rouge Script', cursive;
+  font-size: 50px;
+  font-weight: normal;
+  line-height: 48px;
+  margin: 0 0 50px;
+  text-align: center;
+  text-shadow: 1px 1px 2px #c273bb;
+}
+
+nav li a {
+  width: 500px;
+  margin: 0 auto;
+  color: rgb(224, 94, 203);
+  font-size: 20px;
+}
+
+nav ul li {
+  color: rgb(224, 94, 203);
+}
+
+h2 {
+  text-align: center;
+  color: rgb(167, 39, 99);
+  margin-top: 50px 0;
+}
+
+footer {
+  background-color: rgb(212, 160, 151);
+  color: rgb(161, 83, 135);
+  padding: 9px;
+  text-align: center;
+}
