--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
-@media screen and (min-width:375px) {}
+@media screen and (max-width:480px) {
+  main {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
 
 body,
 html {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   top: 0;
@@ -9,6 +20,14 @@ html {
   width: 100%;
   font-weight: 100;
   font-size: 20px;
+}
+
+main {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 header {
@@ -55,7 +74,6 @@ aside img {
   overflow: hidden;
   border-radius: 50%;
   float: right;
-  
 }
 
 footer {
